Live coding session 4 - Móstoles

--- a/PF-2/templates/2.1.2-DataTypes.ipynb
+++ b/PF-2/templates/2.1.2-DataTypes.ipynb
@@ -92,7 +92,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// products Rectangle, circle, triangle \n"
+    "// products Rectangle, circle, triangle \n",
+    "// type Rectangle = width: Double * height: Double\n",
+    "case class Rectangle(width: Double, height: Double)\n",
+    "case class Triangle(side: Double)\n",
+    "case class Circle(radius: Double)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val r1: Rectangle = new Rectangle(1.0,3.0)\n",
+    "val r2: Rectangle = Rectangle(1.0, 3.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Rectangle(1.0, 3.0) == Rectangle(1.0, 3.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class Rect(w: Int, h: Int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new Rect(1,3) == new Rect(1,3)\n",
+    "new Rect(1,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r1.width\n",
+    "r1.height"
    ]
   },
   {
@@ -142,6 +195,12 @@
    "source": [
     "object Std{\n",
     "    // tuples in Scala, specific and generic\n",
+    "    //case class Tuple2(_1: String, _2: Int)\n",
+    "    //case class Tuple2(_1: Boolean, _2: Char)\n",
+    "    //...\n",
+    "    case class Tuple2[A, B](_1: A, _2: B)\n",
+    "    case class Tuple3[A, B, C](_1: A, _2: B, _3: C)\n",
+    "    \n",
     "}"
    ]
   },
@@ -158,7 +217,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// tuples without sugar\n"
+    "// tuples without sugar\n",
+    "val t1: Tuple2[Int, String] = Tuple2(1, \"uno\")"
    ]
   },
   {
@@ -174,7 +234,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// tuples with sugar\n"
+    "// tuples with sugar\n",
+    "val f1: (Int, String) = (1, \"uno\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val f: (Int, Int) => Int = (x,y) => x+y\n",
+    "val g: Tuple2[Int, Int] => Int = t => t._1+t._2\n",
+    "val h: ((Int, Int)) => Int = t => t._1+t._2"
    ]
   },
   {
@@ -199,10 +271,67 @@
    "source": [
     "// Number of values of Boolean type: ???\n",
     "\n",
-    "\n",
+    "true : Boolean\n",
+    "false: Boolean\n",
     "\n",
     "// Number of values of (Boolean, Boolean) type: ??? \n",
-    "\n"
+    "\n",
+    "??? : (Boolean, Boolean)\n",
+    "??? : (Boolean, Boolean, Boolean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "??? : (Boolean, Boolean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(??? : Boolean, ??? : Boolean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(false: Boolean, false : Boolean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(false: Boolean, true : Boolean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(true : Boolean, false : Boolean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(true : Boolean, true : Boolean)"
    ]
   },
   {
@@ -232,7 +361,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// The unit type and value\n"
+    "// The unit type and value\n",
+    "val u: Unit = ()"
    ]
   },
   {
@@ -249,7 +379,28 @@
    "outputs": [],
    "source": [
     "// Isomorphism of (Boolean, Unit) and Boolean\n",
-    "\n"
+    "\n",
+    "// |Boolean * Unit| = |Boolean| * |Unit| = |Boolean| * 1 = |Boolean|\n",
+    "??? : (Boolean, Unit)\n",
+    "(??? : Boolean, ??? : Unit)\n",
+    "(???: Boolean, (): Unit)\n",
+    "(false: Boolean, (): Unit)\n",
+    "(true: Boolean, (): Unit)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def from(t: (Boolean, Unit)): Boolean =\n",
+    "    t._1 : Boolean\n",
+    "\n",
+    "def to(b: Boolean): (Boolean, Unit) =\n",
+    "    (b : Boolean, () : Unit)"
    ]
   },
   {
@@ -267,7 +418,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// test from-to, to-from equalities\n"
+    "// test from-to, to-from equalities\n",
+    "from(to(true)) == true\n",
+    "from(to(false)) == false\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to(from((true, ()))) == (true, ())\n",
+    "to(from((false, ()))) == (false, ())"
    ]
   },
   {
@@ -293,6 +457,15 @@
     "$|A + B| = |A| + |B|$\n",
     "\n",
     "For instance (the symbol $:=$ is used to give a name to a type):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// type 2Bool = Boolean + (Boolean + Boolean)\n"
    ]
   },
   {
@@ -338,8 +511,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// type Shape = ...\n",
+    "// type Shape = Rectangle + Circle + Triangle\n",
+    "\n",
+    "sealed abstract class Shape\n",
+    "case class Rectangle(width: Double, height: Double) extends Shape\n",
+    "case class Circle(radius: Double) extends Shape\n",
+    "case class Triangle(side: Double) extends Shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val s: Shape = Rectangle(1,1)\n",
+    "val s2: Shape = Circle(1)\n",
+    "val s3: Shape = Triangle(1)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val s4: Shape = new Shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "case class Romboide(/*...*/) extends Shape"
    ]
   },
   {
@@ -380,7 +587,41 @@
    "outputs": [],
    "source": [
     "// observe values of type Shape, toString function\n",
-    "\n"
+    "def kind(s: Shape): String = \n",
+    "    //if (s.isInstanceOf[Rectangle]) \"this is a rectangle\"\n",
+    "    //else if (s.isInstanceOf[Circle]) ... \n",
+    "    s match {\n",
+    "        case r: Rectangle => \"this is a rectangle\" : String\n",
+    "        case c: Circle => \"this is a circle\" : String\n",
+    "        case t: Triangle => \"this is a triangle\" : String\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kind(Rectangle(1,2): Shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val s: Shape = Circle(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kind(s)"
    ]
   },
   {
@@ -408,7 +649,21 @@
    "outputs": [],
    "source": [
     "// A warning should be raised here\n",
-    "\n"
+    "def kind(s: Shape): String = \n",
+    "    s match {\n",
+    "        case r: Rectangle => \"this is a rectangle\" : String\n",
+    "        //case c: Circle => \"this is a circle\" : String\n",
+    "        case t: Triangle => \"this is a triangle\" : String\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kind(Circle(1))"
    ]
   },
   {
@@ -432,9 +687,16 @@
    "outputs": [],
    "source": [
     "object StdSumTypes{\n",
-    "    // Option\n",
+    "    // Option[A] = A + 1\n",
+    "    sealed abstract class Option[A]\n",
+    "    case class Some[A](a: A) extends Option[A]\n",
+    "    case object None extends Option[Nothing]\n",
     "    \n",
-    "    // Either\n",
+    "    \n",
+    "    // Either[A, B] = A + B \n",
+    "    sealed abstract class Either[A, B]\n",
+    "    case class Left[A, B](a: A) extends Either[A, B]\n",
+    "    case class Right[A, B](b: B) extends Either[A, B]\n",
     "}"
    ]
   },
@@ -454,7 +716,8 @@
     "// Using exceptions\n",
     "\n",
     "def divideWithExceptions(a: Double, b: Double): Double =\n",
-    "    ???"
+    "    if (b==0) throw new Exception(\"divide by cero\")\n",
+    "    else a/b"
    ]
   },
   {
@@ -463,7 +726,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// divideWithExceptions(5,0)"
+    "divideWithExceptions(5,0)"
    ]
   },
   {
@@ -474,9 +737,9 @@
    "source": [
     "// Using option\n",
     "\n",
-    "def divideWithExceptions(a: Double, b: Double): Double =\n",
-    "    if (b==0) throw new Exception(\"divide by cero\")\n",
-    "    else a/b"
+    "def divideWithExceptions(a: Double, b: Double): Option[Double] =\n",
+    "    if (b==0) None : Option[Double] // throw new Exception(\"divide by cero\")\n",
+    "    else Some(a/b: Double)"
    ]
   },
   {
@@ -491,7 +754,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "type T = Option[Double]*String = (Double + 1)*String = \n",
+    "    = Double*String + String"
+   ]
   },
   {
    "cell_type": "code",
@@ -501,9 +767,9 @@
    "source": [
     "// Using Either\n",
     "\n",
-    "def divideWithExceptions(a: Double, b: Double): Double =\n",
-    "    if (b==0) throw new Exception(\"divide by cero\")\n",
-    "    else a/b"
+    "def divideWithEither(a: Double, b: Double): Either[String, Double] =\n",
+    "    if (b==0) Left(\"divide by zero\") // throw new Exception(\"divide by cero\")\n",
+    "    else Right(a/b: Double)"
    ]
   },
   {
@@ -518,7 +784,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "divideWithEither(5,0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -540,6 +808,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sealed abstract class BooleanOrNothing\n",
+    "case class Left(b: Boolean) extends BooleanOrNothing\n",
+    "case class Right(n: Nothing) extends BooleanOrNothing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type BooleanOrNothing = Either[Boolean, Nothing]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -553,7 +841,16 @@
    "outputs": [],
    "source": [
     "lazy val impossible: Nothing = \n",
-    "    ???"
+    "    throw new Exception(\"...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "impossible"
    ]
   },
   {
@@ -614,7 +911,14 @@
    "source": [
     "import scala.math._\n",
     "\n",
-    "// area function\n"
+    "// area function\n",
+    "\n",
+    "def area(s: Shape): Double = \n",
+    "    s match {\n",
+    "        case r: Rectangle => r.width*r.height\n",
+    "        case c: Circle => Pi*pow(c.radius, 2)\n",
+    "        case t: Triangle => t.side*t.side/2\n",
+    "    }"
    ]
   },
   {
@@ -640,7 +944,12 @@
    "outputs": [],
    "source": [
     "// using extractors\n",
-    "\n"
+    "def area(s: Shape): Double = \n",
+    "    s match {\n",
+    "        case Rectangle(w,h) => w*h\n",
+    "        case Circle(r) => Pi*pow(r, 2)\n",
+    "        case Triangle(s) => s*s/2\n",
+    "    }\n"
    ]
   },
   {
@@ -657,7 +966,27 @@
    "outputs": [],
    "source": [
     "// big shape function with guards\n",
-    "\n"
+    "\n",
+    "def bigShape(s: Shape): Boolean = \n",
+    "    s match {\n",
+    "        case Rectangle(w,h) => w > 500\n",
+    "        case _ /*a: Any*/ => false\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// big shape function with guards\n",
+    "\n",
+    "def bigShape(s: Shape): Boolean = \n",
+    "    s match {\n",
+    "        case Rectangle(w,h) if w > 500 => true\n",
+    "        case _ /*a: Any*/ => false\n",
+    "    }\n"
    ]
   },
   {
@@ -704,12 +1033,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoo\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def foo(s: Either[Either[Int, String], (Int, Either[String, Boolean])]): Boolean = \n",
-    "    ???"
+    "//type T = (Int + String) + Int * (String + Boolean) \n",
+    "//       =  Int (1) + String (2) + Int * String (3) + Int * Boolean (4)  \n",
+    "\n",
+    "def foo(s: Either[Either[Int, String], \n",
+    "                  (Int, Either[String, Boolean])]): Int = \n",
+    "    s match {\n",
+    "        case Left(e1: Either[Int, String]) => \n",
+    "            e1 match {\n",
+    "                case Left(i: Int) => 1\n",
+    "                case Right(s: String) => 2\n",
+    "            }\n",
+    "        case Right(t: (Int, Either[String, Boolean])) => \n",
+    "            t._2 match {\n",
+    "                case Left(s: String) => 3\n",
+    "                case Right(b: Boolean) => 4\n",
+    "            }\n",
+    "    }\n",
+    "    "
    ]
   },
   {
@@ -726,7 +1082,38 @@
    "outputs": [],
    "source": [
     "def foo(s: Either[Either[Int, String], (Int, Either[String, Boolean])]): Boolean = \n",
-    "    ???"
+    "    s match {\n",
+    "        case Left(Left(i: Int)) => 1\n",
+    "        case Left(Right(s: String)) => 2\n",
+    "        case Right((i: Int, Left(s: String): Either[String, Boolean])) => 3\n",
+    "        case Right((i: Int, Right(b: Boolean): Either[String, Boolean])) => 4\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoo\u001b[39m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foo(s: Either[Either[Int, String], (Int, Either[String, Boolean])]): Int = \n",
+    "    s match {\n",
+    "        case Left(Left(i)) => 1\n",
+    "        case Left(Right(s)) => 2\n",
+    "        case Right((i, Left(s))) => 3\n",
+    "        case Right((i, Right(b))) => 4\n",
+    "    }"
    ]
   },
   {
