--- a/PF-2/exercises/ProblemSet2.ipynb
+++ b/PF-2/exercises/ProblemSet2.ipynb
@@ -160,7 +160,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 4"
+    "## Exercise 4a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show that the following law holds for exponent types: $(Z^X)^Y \\cong (Z^Y)^X$, for all types $X$, $Y$ and $Z$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfrom\u001b[39m\n",
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def from[X, Y, Z](f: (X, Y) => Z): ((X,Y)) => Z = ???\n",
+    "def to[X, Y, Z](f: ((X, Y)) => Z): (X, Y) => Z = ???\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4c"
    ]
   },
   {
@@ -176,8 +219,155 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def curry[X, Y, Z](f: (X, Y) => Z): X => Y => Z = \n",
+    "def curry[X, Y, Z](f: (X, Y) => Z): Y => (X => Z) = \n",
     "    ???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36muncurry\u001b[39m"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def uncurry[X, Y, Z](f: Y => (X => Z)): ((X, Y)) => Z = \n",
+    "    ??? : (((X, Y)) => Z )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36muncurry\u001b[39m"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def uncurry[X, Y, Z](f: Y => (X => Z)): ((X, Y)) => Z = \n",
+    "    (t: (X, Y)) => ??? : Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36muncurry\u001b[39m"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def uncurry[X, Y, Z](f: Y => (X => Z)): ((X, Y)) => Z = \n",
+    "    (t: (X, Y)) => f(??? : Y)(??? : X) : Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36muncurry\u001b[39m"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def uncurry[X, Y, Z](f: Y => (X => Z)): ((X, Y)) => Z = \n",
+    "    (t: (X, Y)) => f(t._2 : Y)(t._1 : X) : Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36muncurry\u001b[39m"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def uncurry[X, Y, Z](f: Y => (X => Z)): ((X, Y)) => Z = \n",
+    "    t => f(t._2)(t._1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36muncurry\u001b[39m"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def uncurry[X, Y, Z](f: Y => (X => Z)): (X, Y) => Z = \n",
+    "    (x: X, y: Y) => f(y)(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36muncurry\u001b[39m"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def uncurry[X, Y, Z](f: X => (Y => Z)): (X, Y) => Z = \n",
+    "    f(_)(_)"
    ]
   },
   {
@@ -185,10 +375,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def uncurry[X, Y, Z](f: X => Y => Z): (X, Y) => Z = \n",
-    "    ???"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -258,20 +445,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfrom\u001b[39m"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def from[X, Y, Z] = ???"
+    "def from[X, Y, Z](f:  X => (Y, Z)): (X => Y, X => Z) =\n",
+    "    (f(_)._1, f(_)._2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def to[X, Y, Z] = ???"
+    "def to[X, Y, Z](t: (X => Y, X => Z)): X => (Y, Z) = \n",
+    "    ??? : (X => (Y, Z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def to[X, Y, Z](t: (X => Y, X => Z)): X => (Y, Z) = \n",
+    "    (x: X) => ??? : (Y, Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def to[X, Y, Z](t: (X => Y, X => Z)): X => (Y, Z) = \n",
+    "    (x: X) => (??? : Y, ??? : Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def to[X, Y, Z](t: (X => Y, X => Z)): X => (Y, Z) = \n",
+    "    (x: X) => (t._1(??? : X) : Y, t._2(??? : X) : Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def to[X, Y, Z](t: (X => Y, X => Z)): X => (Y, Z) = \n",
+    "    (x: X) => (t._1(x : X) : Y, t._2(x : X) : Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mf\u001b[39m: (\u001b[32mInt\u001b[39m, \u001b[32mInt\u001b[39m) => \u001b[32mInt\u001b[39m = ammonite.$sess.cmd22$Helper$$Lambda$2250/0x000000080157f040@7110667f"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val f: (Int, Int) => Int = _+_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def to[X, Y, Z](t: (X => Y, X => Z)): X => (Y, Z) = \n",
+    "    x => (t._1(x), t._2(x))"
    ]
   },
   {
@@ -279,6 +615,111 @@
    "metadata": {},
    "source": [
     "Fix the type parameters to particular types $A$, $B$ and $C$, implement equality for the corresponding signatures and check that both functions, `from[A, B, C]` and `to[A, B, C]`, are inverses of each other given two sample functions of your choice.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mequal1\u001b[39m"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def equal1(f1: Int => (String, Boolean), f2: Int => (String, Boolean)): Boolean = \n",
+    "    f1(0) == f2(0) && f1(1) == f2(1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mf\u001b[39m: \u001b[32mInt\u001b[39m => (\u001b[32mString\u001b[39m, \u001b[32mBoolean\u001b[39m) = ammonite.$sess.cmd8$Helper$$Lambda$2165/0x000000080154f040@7266d3ee"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val f: Int => (String, Boolean) = (i: Int) => (i.toString, i % 2 == 0)\n",
+    "      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mt\u001b[39m: (\u001b[32mInt\u001b[39m => \u001b[32mString\u001b[39m, \u001b[32mInt\u001b[39m => \u001b[32mBoolean\u001b[39m) = (\n",
+       "  ammonite.$sess.cmd9$Helper$$Lambda$2171/0x0000000801553040@12a8bd2a,\n",
+       "  ammonite.$sess.cmd9$Helper$$Lambda$2172/0x0000000801554040@6c3e7486\n",
+       ")"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val t: (Int => String, Int => Boolean) = from(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mf1\u001b[39m: \u001b[32mInt\u001b[39m => (\u001b[32mString\u001b[39m, \u001b[32mBoolean\u001b[39m) = ammonite.$sess.cmd5$Helper$$Lambda$2195/0x000000080155f840@425791aa"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val f1: Int => (String, Boolean) = to(from(f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres14\u001b[39m: \u001b[32mBoolean\u001b[39m = true"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "equal1(f, to(from(f)))"
    ]
   },
   {
