Live coding session 5 - Móstoles

--- a/PF-2/exercises/ProblemSet2.ipynb
+++ b/PF-2/exercises/ProblemSet2.ipynb
@@ -164,6 +164,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// X^Y ======> Y => X \n",
+    "// X*Y ======> (Y, X)\n",
+    "// X+Y ======> Either[X, Y]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,8 +187,154 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def curry[X, Y, Z](f: (X, Y) => Z): X => Y => Z = \n",
-    "    ???"
+    "// Z^(X*Y) ======> ((X*Y)) => Z\n",
+    "// (Z^X)^Y ======> Y => (X => Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def curry[X, Y, Z](f: (X, Y) => Z): X => (Y => Z) = \n",
+    "    ??? : (X => (Y => Z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcurry\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// construction\n",
+    "def curry[X, Y, Z](f: (X, Y) => Z): X => (Y => Z) = \n",
+    "    (x : X) => ??? : (Y => Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcurry\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// construction\n",
+    "def curry[X, Y, Z](f: (X, Y) => Z): X => (Y => Z) = \n",
+    "    (x : X) => (y: Y) => ??? : Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcurry\u001b[39m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// observation\n",
+    "def curry[X, Y, Z](f: (X, Y) => Z): X => (Y => Z) = \n",
+    "    (x : X) => (y: Y) => \n",
+    "        // x: X, y: Y, f: (X, Y) => Z\n",
+    "        f(??? : X, ??? : Y) : Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcurry\u001b[39m"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// observation\n",
+    "def curry[X, Y, Z](f: (X, Y) => Z): X => (Y => Z) = \n",
+    "    (x : X) => (y: Y) => \n",
+    "        // x: X, y: Y, f: (X, Y) => Z\n",
+    "        f(x : X, y : Y) : Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcurry\u001b[39m"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// observation\n",
+    "def curry[X, Y, Z](f: (X, Y) => Z): X => (Y => Z) = \n",
+    "    x => y => f(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcurry\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// observation\n",
+    "def curry[X, Y, Z](f: (X, Y) => Z): X => (Y => Z) = \n",
+    "    x => y => f(x, y)"
    ]
   },
   {
@@ -262,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def from[X, Y, Z] = ???"
+    "def from[X, Y, Z]  = ???"
    ]
   },
   {
