--- a/PF-2/templates/2.1.2-DataTypes.ipynb
+++ b/PF-2/templates/2.1.2-DataTypes.ipynb
@@ -759,12 +759,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mf\u001b[39m\n",
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mf1\u001b[39m\n",
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mf2\u001b[39m\n",
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mf3\u001b[39m\n",
+       "\u001b[36mf3V\u001b[39m: \u001b[32mBoolean\u001b[39m => \u001b[32mBoolean\u001b[39m = ammonite.$sess.cmd4$Helper$$Lambda$1952/0x000000080150b840@654de1b9\n",
+       "\u001b[36mf4\u001b[39m: \u001b[32mBoolean\u001b[39m => \u001b[32mBoolean\u001b[39m = ammonite.$sess.cmd4$Helper$$Lambda$1953/0x000000080150c840@4c9c5759"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// |Boolean|^|Boolean| = |Boolean|*|Boolean|\n",
+    "\n",
+    "def f(b: Boolean): Boolean = \n",
+    "    ??? : Boolean\n",
+    "\n",
+    "// false -> false : Boolean  ; true -> false : Boolean\n",
+    "def f1(b: Boolean): Boolean = \n",
+    "    false\n",
+    "\n",
+    "// false -> false : Boolean  ; true -> true : Boolean\n",
+    "def f2(b: Boolean): Boolean = \n",
+    "    b : Boolean\n",
+    "\n",
+    "// false -> true : Boolean  ; true -> false : Boolean\n",
+    "\n",
+    "def f3(b: Boolean): Boolean = \n",
+    "    !b : Boolean\n",
+    "\n",
+    "val f3V: Boolean => Boolean = \n",
+    "    //(b: Boolean) => !b\n",
+    "    // _ => !b WRONG!\n",
+    "    !_\n",
+    "\n",
+    "// false -> true : Boolean  ; true -> true : Boolean\n",
+    "\n",
+    "val f4: Boolean => Boolean = \n",
+    "    //(b: Boolean) => true : Boolean\n",
+    "    // b => true\n",
+    "    _ => true\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// false -> false, true -> false\n",
-    "// ..."
+    "// Option[Boolean] => Boolean // Boolean + 1 => Boolean\n",
+    "// |Boolean|^|Option[Boolean] = |Bool|*|Bool|*|Bool| = 2^3 = 8\n",
+    "// None -> ??? : Bool; \n",
+    "// Some(true) -> ??? : Bool; \n",
+    "// Some(false) -> ??? : Bool\n"
    ]
   },
   {
@@ -902,16 +959,538 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// from\n"
+    "// from\n",
+    "def from[X, Y, Z](f: Either[Y, Z] => X): (Y => X, Z => X) = \n",
+    "    ??? : (Y => X, Z => X) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfrom\u001b[39m"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// to"
+    "// from\n",
+    "def from[X, Y, Z](f: Either[Y, Z] => X): (Y => X, Z => X) = \n",
+    "    (??? : Y => X, ??? : Z => X) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfrom\u001b[39m"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// from\n",
+    "def from[X, Y, Z](f: Either[Y, Z] => X): (Y => X, Z => X) = \n",
+    "    ((y : Y) => ??? : X, \n",
+    "     (z : Z) => ??? : X) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfrom\u001b[39m"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// from\n",
+    "def from[X, Y, Z](f: Either[Y, Z] => X): (Y => X, Z => X) = \n",
+    "    ((y : Y) => f(??? : Either[Y, Z]) : X, \n",
+    "     (z : Z) => f(??? : Either[Y, Z]) : X) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfrom\u001b[39m"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// from\n",
+    "def from[X, Y, Z](f: Either[Y, Z] => X): (Y => X, Z => X) = \n",
+    "    ((y : Y) => f(Right(??? : Z) : Either[Y, Z]) : X, \n",
+    "     (z : Z) => f(??? : Either[Y, Z]) : X) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfrom\u001b[39m"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// from\n",
+    "// Can't give value for Z; backtracking!\n",
+    "def from[X, Y, Z](f: Either[Y, Z] => X): (Y => X, Z => X) = \n",
+    "    ((y : Y) => f(Right(??? : Z) : Either[Y, Z]) : X, \n",
+    "     (z : Z) => f(??? : Either[Y, Z]) : X) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfrom\u001b[39m"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// from\n",
+    "def from[X, Y, Z](f: Either[Y, Z] => X): (Y => X, Z => X) = \n",
+    "    ((y : Y) => f(Left(??? : Y) : Either[Y, Z]) : X, \n",
+    "     (z : Z) => f(??? : Either[Y, Z]) : X) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfrom\u001b[39m"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// from\n",
+    "def from[X, Y, Z](f: Either[Y, Z] => X): (Y => X, Z => X) = \n",
+    "    ((y : Y) => f(Left(y : Y) : Either[Y, Z]) : X, \n",
+    "     (z : Z) => f(Right(z : Z) : Either[Y, Z]) : X) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres17\u001b[39m: (\u001b[32mBoolean\u001b[39m => \u001b[32mString\u001b[39m, \u001b[32mChar\u001b[39m => \u001b[32mString\u001b[39m) = (\n",
+       "  ammonite.$sess.cmd15$Helper$$Lambda$2256/0x00000008015b1840@221da31a,\n",
+       "  ammonite.$sess.cmd15$Helper$$Lambda$2257/0x00000008015b2040@56c48457\n",
+       ")"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from[String, Boolean, Char](\n",
+    "    (e : Either[Boolean, Char]) => \n",
+    "       e match {\n",
+    "           case Left(b) => \"boolean\"\n",
+    "           case Right(c) => \"char\"\n",
+    "       })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mt\u001b[39m: (\u001b[32mBoolean\u001b[39m => \u001b[32mString\u001b[39m, \u001b[32mChar\u001b[39m => \u001b[32mString\u001b[39m) = (\n",
+       "  ammonite.$sess.cmd15$Helper$$Lambda$2256/0x00000008015b1840@6cdaab16,\n",
+       "  ammonite.$sess.cmd15$Helper$$Lambda$2257/0x00000008015b2040@1244039c\n",
+       ")"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val t: (Boolean => String, Char => String) = \n",
+    "    from[String, Boolean, Char](\n",
+    "        {\n",
+    "           case Left(b: Boolean) => \"boolean\"\n",
+    "           case Right(c: Char) => \"char\"\n",
+    "        }\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres21_0\u001b[39m: \u001b[32mString\u001b[39m = \u001b[32m\"boolean\"\u001b[39m\n",
+       "\u001b[36mres21_1\u001b[39m: \u001b[32mString\u001b[39m = \u001b[32m\"boolean\"\u001b[39m\n",
+       "\u001b[36mres21_2\u001b[39m: \u001b[32mString\u001b[39m = \u001b[32m\"char\"\u001b[39m\n",
+       "\u001b[36mres21_3\u001b[39m: \u001b[32mString\u001b[39m = \u001b[32m\"char\"\u001b[39m"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t._1(true)\n",
+    "t._1(false)\n",
+    "t._2('a')\n",
+    "t._2('b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// to\n",
+    "def to[X, Y, Z](f: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    ??? : (Either[Y, Z] => X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// 1 - construction\n",
+    "def to[X, Y, Z](f: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    (e: Either[Y, Z]) => ??? : X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// 1 - observation (e, f._1, f._2)\n",
+    "def to[X, Y, Z](f: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    (e: Either[Y, Z]) => e match {\n",
+    "        case Left(y: Y) => ??? : X\n",
+    "        case Right(z: Z) => ??? : X\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// 1 - observation \n",
+    "def to[X, Y, Z](f: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    (e: Either[Y, Z]) => e match {\n",
+    "        case Left(y: Y) => \n",
+    "            // f._1, f._2, e, y\n",
+    "            f._2(??? : Z) : X\n",
+    "        case Right(z: Z) => \n",
+    "            // f._1, f._2, e, z\n",
+    "            ??? : X\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// 1 - observation - backtracking!!!!\n",
+    "def to[X, Y, Z](f: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    (e: Either[Y, Z]) => e match {\n",
+    "        case Left(y: Y) => \n",
+    "            // f._1, f._2, e, y\n",
+    "            f._2(??? : Z) : X\n",
+    "        case Right(z: Z) => \n",
+    "            // f._1, f._2, e, z\n",
+    "            ??? : X\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// 1 - observation \n",
+    "def to[X, Y, Z](f: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    (e: Either[Y, Z]) => e match {\n",
+    "        case Left(y: Y) => \n",
+    "            // f._1, f._2, e, y\n",
+    "            f._1(??? : Y) : X\n",
+    "        case Right(z: Z) => \n",
+    "            // f._1, f._2, e, z\n",
+    "            ??? : X\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// 1 - observation \n",
+    "def to[X, Y, Z](f: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    (e: Either[Y, Z]) => e match {\n",
+    "        case Left(y: Y) => \n",
+    "            // f._1, f._2, e, y\n",
+    "            f._1(y : Y) : X\n",
+    "        case Right(z: Z) => \n",
+    "            // f._1, f._2, e, z\n",
+    "            f._2(z) : X\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// 1 - observation \n",
+    "def to[X, Y, Z](f: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    (e: Either[Y, Z]) => e match {\n",
+    "        case Left(y: Y) => \n",
+    "            // f._1, f._2, e, y\n",
+    "            f._1(y : Y) : X\n",
+    "        case Right(z: Z) => \n",
+    "            // f._1, f._2, e, z\n",
+    "            f._2(z) : X\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// 1 - observation \n",
+    "def to[X, Y, Z](f: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    {\n",
+    "        case Left(y) => \n",
+    "            f._1(y)\n",
+    "        case Right(z) => \n",
+    "            f._2(z)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// to\n",
+    "def to[X, Y, Z]: ((Y => X, Z => X)) => (Either[Y, Z] => X) = \n",
+    "    ???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// to\n",
+    "def to[X, Y, Z]: (Y => X, Z => X) => (Either[Y, Z] => X) = \n",
+    "    ???"
    ]
   },
   {
